y.output
Grammar

    0 $accept: rot $end

    1 rot: dealer call_list

    2 dealer: LP BEGIN_CALL RP

    3 call_list: call_list call
    4          | call

    5 call: call_inner call_inner

    6 call_inner: LP term RP

    7 term: term factor
    8     | factor

    9 factor: YASAI
   10       | NINNIKU
   11       | ABURA
   12       | KARAME
   13       | ZENMASHI
   14       | NUKI
   15       | KOBUTA
   16       | OOBUTA
   17       | DOUBLE
   18       | DOUBLE_I


Terminals, with rules where they appear

$end (0) 0
error (256)
LP (258) 2 6
RP (259) 2 6
NUKI (260) 14
YASAI (261) 9
NINNIKU (262) 10
ABURA (263) 11
KARAME (264) 12
ZENMASHI (265) 13
KOBUTA (266) 15
OOBUTA (267) 16
DOUBLE (268) 17
DOUBLE_I (269) 18
BEGIN_CALL (270) 2


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
rot (17)
    on left: 1, on right: 0
dealer (18)
    on left: 2, on right: 1
call_list (19)
    on left: 3 4, on right: 1 3
call (20)
    on left: 5, on right: 3 4
call_inner (21)
    on left: 6, on right: 5
term (22)
    on left: 7 8, on right: 6 7
factor (23)
    on left: 9 10 11 12 13 14 15 16 17 18, on right: 7 8


state 0

    0 $accept: . rot $end

    LP  shift, and go to state 1

    rot     go to state 2
    dealer  go to state 3


state 1

    2 dealer: LP . BEGIN_CALL RP

    BEGIN_CALL  shift, and go to state 4


state 2

    0 $accept: rot . $end

    $end  shift, and go to state 5


state 3

    1 rot: dealer . call_list

    LP  shift, and go to state 6

    call_list   go to state 7
    call        go to state 8
    call_inner  go to state 9


state 4

    2 dealer: LP BEGIN_CALL . RP

    RP  shift, and go to state 10


state 5

    0 $accept: rot $end .

    $default  accept


state 6

    6 call_inner: LP . term RP

    NUKI      shift, and go to state 11
    YASAI     shift, and go to state 12
    NINNIKU   shift, and go to state 13
    ABURA     shift, and go to state 14
    KARAME    shift, and go to state 15
    ZENMASHI  shift, and go to state 16
    KOBUTA    shift, and go to state 17
    OOBUTA    shift, and go to state 18
    DOUBLE    shift, and go to state 19
    DOUBLE_I  shift, and go to state 20

    term    go to state 21
    factor  go to state 22


state 7

    1 rot: dealer call_list .
    3 call_list: call_list . call

    LP  shift, and go to state 6

    $default  reduce using rule 1 (rot)

    call        go to state 23
    call_inner  go to state 9


state 8

    4 call_list: call .

    $default  reduce using rule 4 (call_list)


state 9

    5 call: call_inner . call_inner

    LP  shift, and go to state 6

    call_inner  go to state 24


state 10

    2 dealer: LP BEGIN_CALL RP .

    $default  reduce using rule 2 (dealer)


state 11

   14 factor: NUKI .

    $default  reduce using rule 14 (factor)


state 12

    9 factor: YASAI .

    $default  reduce using rule 9 (factor)


state 13

   10 factor: NINNIKU .

    $default  reduce using rule 10 (factor)


state 14

   11 factor: ABURA .

    $default  reduce using rule 11 (factor)


state 15

   12 factor: KARAME .

    $default  reduce using rule 12 (factor)


state 16

   13 factor: ZENMASHI .

    $default  reduce using rule 13 (factor)


state 17

   15 factor: KOBUTA .

    $default  reduce using rule 15 (factor)


state 18

   16 factor: OOBUTA .

    $default  reduce using rule 16 (factor)


state 19

   17 factor: DOUBLE .

    $default  reduce using rule 17 (factor)


state 20

   18 factor: DOUBLE_I .

    $default  reduce using rule 18 (factor)


state 21

    6 call_inner: LP term . RP
    7 term: term . factor

    RP        shift, and go to state 25
    NUKI      shift, and go to state 11
    YASAI     shift, and go to state 12
    NINNIKU   shift, and go to state 13
    ABURA     shift, and go to state 14
    KARAME    shift, and go to state 15
    ZENMASHI  shift, and go to state 16
    KOBUTA    shift, and go to state 17
    OOBUTA    shift, and go to state 18
    DOUBLE    shift, and go to state 19
    DOUBLE_I  shift, and go to state 20

    factor  go to state 26


state 22

    8 term: factor .

    $default  reduce using rule 8 (term)


state 23

    3 call_list: call_list call .

    $default  reduce using rule 3 (call_list)


state 24

    5 call: call_inner call_inner .

    $default  reduce using rule 5 (call)


state 25

    6 call_inner: LP term RP .

    $default  reduce using rule 6 (call_inner)


state 26

    7 term: term factor .

    $default  reduce using rule 7 (term)
